# sure-widget-backend

./: README.md  database_1.py  file_processor.py  main.py  prompt_email.txt  pyproject.toml
.github/workflows/: main_sure-ai.yml
tools/: slack_tools.py  stripe_mcp_tool.py  vector_search_tool.py
